@@ -27,6 +27,8 @@ Changes to Existing Features in 3.11.2
 ======================================
 [] Icon column now eligible for Column Picker.  Can be displayed at user's
 discretion.
+[] If user has icon column in List view, the Recent Entries popup menu will
+show them too.
 
 New Features for 3.11.2
 =======================
